--- a/src/App.css
+++ b/src/App.css
@@ -41,9 +41,17 @@
   color: #888;
 }
 
-.voteButton {
+.vote-button {
   width: 50px;
   height: 50px;
   border-radius: 50%;
   background-color: lightgray;
+}
+
+.comment-card {
+  background-color: #f0f0f0;
+  border: 1px solid #ddd;
+  padding: 12px;
+  margin: 12px;
+  border-radius: 12px;
 }
